--- a/packages/blitz-lib-docker/package.json
+++ b/packages/blitz-lib-docker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blitz-cli",
+  "name": "blitz-lib-docker",
   "version": "0.0.0",
   "description": "> TODO: description",
   "author": "Chandresh Rajkumar Manonmani <cs1193@gmail.com>",
@@ -7,10 +7,8 @@
   "license": "UNLICENSED",
   "main": "lib/index.js",
   "directories": {
-    "lib": "lib"
-  },
-  "bin": {
-    "blitz": "./bin/index.js"
+    "lib": "lib",
+    "test": "__tests__"
   },
   "files": [
     "lib"
