--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "lerna": "^3.20.2"
+    "lerna": "^3.20.2",
+    "lerna-dependency-graph": "^1.0.2"
+  },
+  "workspaces": [
+    "packages/*"
+  ],
+  "scripts": {
+    "dep-graph": "./node_modules/.bin/lerna-dependency-graph"
   }
 }
