--- a/packages/blitz-core/package.json
+++ b/packages/blitz-core/package.json
@@ -1,14 +1,13 @@
 {
   "name": "blitz-core",
   "version": "0.0.0",
-  "description": "> TODO: description",
+  "description": "",
   "author": "Chandresh Rajkumar Manonmani <cs1193@gmail.com>",
   "homepage": "https://github.com/cs1193/blitz#readme",
   "license": "UNLICENSED",
   "main": "lib/index.js",
   "directories": {
-    "lib": "lib",
-    "test": "__tests__"
+    "lib": "lib"
   },
   "files": [
     "lib"
