--- a/packages/blitz-core/package.json
+++ b/packages/blitz-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blitz-core",
+  "name": "@cs1193/blitz-core",
   "version": "0.0.0",
   "description": "",
   "author": "Chandresh Rajkumar Manonmani <cs1193@gmail.com>",
