fix: dev: develop: libs added to blitz-core

--- a/packages/blitz-core/package.json
+++ b/packages/blitz-core/package.json
@@ -21,5 +21,10 @@
   },
   "bugs": {
     "url": "https://github.com/cs1193/blitz/issues"
+  },
+  "dependencies": {
+    "@cs1193/blitz-lib-cloud-azure": "file:../blitz-lib-cloud-azure",
+    "@cs1193/blitz-lib-docker": "file:../blitz-lib-docker",
+    "@cs1193/blitz-lib-terraform": "file:../blitz-lib-terraform"
   }
 }
