--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "preferGlobal": false,
   "devDependencies": {
     "lerna": "^3.20.2",
+    "lerna-changelog": "^1.0.1",
     "lerna-dependency-graph": "^1.0.2"
   },
   "workspaces": [
@@ -17,503 +18,6 @@
     "dep-graph": "lerna-dependency-graph"
   },
   "main": "index.js",
-  "dependencies": {
-    "abbrev": "^1.1.1",
-    "agentkeepalive": "^3.5.2",
-    "agent-base": "^4.3.0",
-    "ansi-regex": "^4.1.0",
-    "ajv": "^6.12.2",
-    "ansi-styles": "^3.2.1",
-    "aproba": "^1.2.0",
-    "arr-diff": "^4.0.0",
-    "are-we-there-yet": "^1.1.5",
-    "any-promise": "^1.3.0",
-    "argparse": "^1.0.10",
-    "JSONStream": "^1.3.5",
-    "array-differ": "^2.1.0",
-    "array-find-index": "^1.0.2",
-    "arr-flatten": "^1.1.0",
-    "array-uniq": "^1.0.3",
-    "array-ify": "^1.0.0",
-    "arrify": "^1.0.1",
-    "array-union": "^1.0.2",
-    "array-unique": "^0.3.2",
-    "asn1": "^0.2.4",
-    "asap": "^2.0.6",
-    "atob": "^2.1.2",
-    "asynckit": "^0.4.0",
-    "assert-plus": "^1.0.0",
-    "assign-symbols": "^1.0.0",
-    "aws-sign2": "^0.7.0",
-    "atob-lite": "^2.0.0",
-    "aws4": "^1.9.1",
-    "balanced-match": "^1.0.0",
-    "blitz-core": "^0.0.0",
-    "before-after-hook": "^2.1.0",
-    "blitz-lib-docker": "^0.0.0",
-    "blitz-lib-cloud-azure": "^0.0.0",
-    "base": "^0.11.2",
-    "bcrypt-pbkdf": "^1.0.2",
-    "bluebird": "^3.7.2",
-    "braces": "^2.3.2",
-    "brace-expansion": "^1.1.11",
-    "buffer-from": "^1.1.1",
-    "btoa-lite": "^1.0.0",
-    "byline": "^5.0.0",
-    "byte-size": "^5.0.1",
-    "builtins": "^1.0.3",
-    "cache-base": "^1.0.1",
-    "cacache": "^12.0.4",
-    "arr-union": "^3.1.0",
-    "call-me-maybe": "^1.0.1",
-    "caller-callsite": "^2.0.0",
-    "camelcase": "^5.3.1",
-    "callsites": "^2.0.0",
-    "chalk": "^2.4.2",
-    "caller-path": "^2.0.0",
-    "caseless": "^0.12.0",
-    "camelcase-keys": "^4.2.0",
-    "chownr": "^1.1.4",
-    "ci-info": "^2.0.0",
-    "cli-cursor": "^2.1.0",
-    "chardet": "^0.7.0",
-    "cli-width": "^2.2.1",
-    "cliui": "^6.0.0",
-    "code-point-at": "^1.1.0",
-    "clone": "^1.0.4",
-    "collection-visit": "^1.0.0",
-    "color-convert": "^1.9.3",
-    "color-name": "^1.1.3",
-    "class-utils": "^0.3.6",
-    "columnify": "^1.5.4",
-    "combined-stream": "^1.0.8",
-    "commander": "^2.20.3",
-    "component-emitter": "^1.3.0",
-    "concat-stream": "^1.6.2",
-    "compare-func": "^1.3.2",
-    "conventional-changelog-angular": "^5.0.6",
-    "console-control-strings": "^1.1.0",
-    "config-chain": "^1.1.12",
-    "concat-map": "^0.0.1",
-    "conventional-changelog-writer": "^4.0.11",
-    "conventional-commits-filter": "^2.0.2",
-    "conventional-changelog-core": "^3.2.3",
-    "conventional-changelog-preset-loader": "^2.3.0",
-    "conventional-commits-parser": "^3.0.8",
-    "conventional-recommended-bump": "^5.0.1",
-    "copy-concurrently": "^1.0.5",
-    "copy-descriptor": "^0.1.1",
-    "cosmiconfig": "^5.2.1",
-    "cyclist": "^1.0.1",
-    "cross-spawn": "^6.0.5",
-    "core-util-is": "^1.0.2",
-    "dashdash": "^1.14.1",
-    "currently-unhandled": "^0.4.1",
-    "dargs": "^4.1.0",
-    "dateformat": "^3.0.3",
-    "debug": "^2.6.9",
-    "debuglog": "^1.0.1",
-    "decamelize-keys": "^1.1.0",
-    "decamelize": "^1.2.0",
-    "dedent": "^0.7.0",
-    "defaults": "^1.0.3",
-    "define-properties": "^1.1.3",
-    "delegates": "^1.0.0",
-    "decode-uri-component": "^0.2.0",
-    "define-property": "^0.2.5",
-    "ansi-escapes": "^3.2.0",
-    "delayed-stream": "^1.0.0",
-    "blitz-cli": "^0.0.0",
-    "detect-indent": "^5.0.0",
-    "deprecation": "^2.3.1",
-    "duplexer": "^0.1.1",
-    "dezalgo": "^1.0.3",
-    "dir-glob": "^2.2.2",
-    "ecc-jsbn": "^0.1.2",
-    "duplexify": "^3.7.1",
-    "emoji-regex": "^7.0.3",
-    "encoding": "^0.1.12",
-    "envinfo": "^7.5.1",
-    "end-of-stream": "^1.4.4",
-    "env-paths": "^2.2.0",
-    "es-abstract": "^1.17.5",
-    "error-ex": "^1.3.2",
-    "err-code": "^1.1.2",
-    "es6-promise": "^4.2.8",
-    "es-to-primitive": "^1.2.1",
-    "es6-promisify": "^5.0.0",
-    "escape-string-regexp": "^1.0.5",
-    "esprima": "^4.0.1",
-    "execa": "^1.0.0",
-    "eventemitter3": "^3.1.2",
-    "expand-brackets": "^2.1.4",
-    "extend": "^3.0.2",
-    "external-editor": "^3.1.0",
-    "extend-shallow": "^2.0.1",
-    "extsprintf": "^1.3.0",
-    "fast-json-stable-stringify": "^2.1.0",
-    "fast-glob": "^2.2.7",
-    "fast-deep-equal": "^3.1.1",
-    "extglob": "^2.0.4",
-    "figgy-pudding": "^3.5.2",
-    "fill-range": "^4.0.0",
-    "flush-write-stream": "^1.1.1",
-    "find-up": "^3.0.0",
-    "figures": "^2.0.0",
-    "for-in": "^1.0.2",
-    "form-data": "^2.3.3",
-    "fragment-cache": "^0.2.1",
-    "forever-agent": "^0.6.1",
-    "from2": "^2.3.0",
-    "fs-minipass": "^1.2.7",
-    "fs-write-stream-atomic": "^1.0.10",
-    "fs-extra": "^8.1.0",
-    "fs.realpath": "^1.0.0",
-    "get-caller-file": "^2.0.5",
-    "function-bind": "^1.1.1",
-    "gauge": "^2.7.4",
-    "get-port": "^4.2.0",
-    "genfun": "^5.0.0",
-    "get-value": "^2.0.6",
-    "get-stream": "^4.1.0",
-    "get-pkg-repo": "^1.4.0",
-    "get-stdin": "^4.0.1",
-    "getpass": "^0.1.7",
-    "git-remote-origin-url": "^2.0.0",
-    "git-semver-tags": "^2.0.3",
-    "git-up": "^4.0.1",
-    "git-raw-commits": "^2.0.0",
-    "gitconfiglocal": "^1.0.0",
-    "git-url-parse": "^11.1.2",
-    "globby": "^9.2.0",
-    "glob-parent": "^5.1.1",
-    "glob": "^7.1.6",
-    "graphviz": "^0.0.9",
-    "glob-to-regexp": "^0.3.0",
-    "graceful-fs": "^4.2.4",
-    "handlebars": "^4.7.6",
-    "has": "^1.0.3",
-    "har-validator": "^5.1.3",
-    "har-schema": "^2.0.0",
-    "has-value": "^1.0.0",
-    "has-symbols": "^1.0.1",
-    "has-flag": "^3.0.0",
-    "has-unicode": "^2.0.1",
-    "http-cache-semantics": "^3.8.1",
-    "http-signature": "^1.2.0",
-    "has-values": "^1.0.0",
-    "hosted-git-info": "^2.8.8",
-    "http-proxy-agent": "^2.1.0",
-    "https-proxy-agent": "^2.2.4",
-    "humanize-ms": "^1.2.1",
-    "iferr": "^0.1.5",
-    "ignore-walk": "^3.0.3",
-    "iconv-lite": "^0.4.24",
-    "import-local": "^2.0.0",
-    "ignore": "^4.0.6",
-    "import-fresh": "^2.0.0",
-    "indent-string": "^3.2.0",
-    "imurmurhash": "^0.1.4",
-    "infer-owner": "^1.0.4",
-    "ini": "^1.3.5",
-    "inherits": "^2.0.4",
-    "inflight": "^1.0.6",
-    "init-package-json": "^1.10.3",
-    "is-arrayish": "^0.2.1",
-    "inquirer": "^6.5.2",
-    "ip": "^1.1.5",
-    "is-buffer": "^1.1.6",
-    "is-accessor-descriptor": "^1.0.0",
-    "is-callable": "^1.1.5",
-    "is-data-descriptor": "^1.0.0",
-    "is-ci": "^2.0.0",
-    "is-directory": "^0.3.1",
-    "is-descriptor": "^1.0.2",
-    "is-date-object": "^1.0.2",
-    "is-fullwidth-code-point": "^2.0.0",
-    "is-finite": "^1.1.0",
-    "is-extendable": "^0.1.1",
-    "is-extglob": "^2.1.1",
-    "is-obj": "^1.0.1",
-    "is-plain-obj": "^1.1.0",
-    "is-glob": "^4.0.1",
-    "is-number": "^3.0.0",
-    "is-plain-object": "^2.0.4",
-    "is-regex": "^1.0.5",
-    "is-ssh": "^1.3.1",
-    "is-stream": "^1.1.0",
-    "is-text-path": "^1.0.1",
-    "is-symbol": "^1.0.3",
-    "is-windows": "^1.0.2",
-    "is-utf8": "^0.2.1",
-    "is-typedarray": "^1.0.0",
-    "isexe": "^2.0.0",
-    "isstream": "^0.1.2",
-    "isarray": "^1.0.0",
-    "js-yaml": "^3.13.1",
-    "isobject": "^3.0.1",
-    "json-schema": "^0.2.3",
-    "jsbn": "^0.1.1",
-    "json-parse-better-errors": "^1.0.2",
-    "json-stringify-safe": "^5.0.1",
-    "jsonparse": "^1.3.1",
-    "json-schema-traverse": "^0.4.1",
-    "jsonfile": "^4.0.0",
-    "jsprim": "^1.4.1",
-    "kind-of": "^6.0.3",
-    "load-json-file": "^5.3.0",
-    "lodash.clonedeep": "^4.5.0",
-    "locate-path": "^3.0.0",
-    "lodash.get": "^4.4.2",
-    "lodash._reinterpolate": "^3.0.0",
-    "lodash.set": "^4.3.2",
-    "lodash.ismatch": "^4.4.0",
-    "lodash": "^4.17.15",
-    "lodash.sortby": "^4.7.0",
-    "lodash.templatesettings": "^4.2.0",
-    "lodash.template": "^4.5.0",
-    "macos-release": "^2.3.0",
-    "loud-rejection": "^1.6.0",
-    "lodash.uniq": "^4.5.0",
-    "lru-cache": "^5.1.1",
-    "map-obj": "^1.0.1",
-    "make-dir": "^1.3.0",
-    "map-cache": "^0.2.2",
-    "make-fetch-happen": "^5.0.2",
-    "map-visit": "^1.0.0",
-    "meow": "^4.0.1",
-    "merge2": "^1.3.0",
-    "micromatch": "^3.1.10",
-    "mime-db": "^1.44.0",
-    "mime-types": "^2.1.27",
-    "mimic-fn": "^1.2.0",
-    "minimatch": "^3.0.4",
-    "minimist": "^1.2.5",
-    "minipass": "^2.9.0",
-    "minimist-options": "^3.0.2",
-    "minizlib": "^1.3.3",
-    "mississippi": "^3.0.0",
-    "mixin-deep": "^1.3.2",
-    "modify-values": "^1.0.1",
-    "mkdirp": "^0.5.5",
-    "multimatch": "^3.0.0",
-    "move-concurrently": "^1.0.1",
-    "mkdirp-promise": "^5.0.1",
-    "ms": "^2.0.0",
-    "mute-stream": "^0.0.7",
-    "mz": "^2.7.0",
-    "nanomatch": "^1.2.13",
-    "nice-try": "^1.0.5",
-    "node-fetch": "^2.6.0",
-    "neo-async": "^2.6.1",
-    "node-fetch-npm": "^2.0.4",
-    "node-gyp": "^5.1.0",
-    "nopt": "^4.0.3",
-    "normalize-url": "^3.3.0",
-    "normalize-package-data": "^2.5.0",
-    "npm-bundled": "^1.1.1",
-    "npm-lifecycle": "^3.1.5",
-    "npm-package-arg": "^6.1.1",
-    "npm-normalize-package-bin": "^1.0.1",
-    "npm-packlist": "^1.4.8",
-    "number-is-nan": "^1.0.1",
-    "oauth-sign": "^0.9.0",
-    "npm-pick-manifest": "^3.0.2",
-    "npm-run-path": "^2.0.2",
-    "npmlog": "^4.1.2",
-    "object-assign": "^4.1.1",
-    "object-inspect": "^1.7.0",
-    "object.assign": "^4.1.0",
-    "object-copy": "^0.1.0",
-    "object-keys": "^1.1.1",
-    "object-visit": "^1.0.1",
-    "object.getownpropertydescriptors": "^2.1.0",
-    "octokit-pagination-methods": "^1.1.0",
-    "object.pick": "^1.3.0",
-    "onetime": "^2.0.1",
-    "os-homedir": "^1.0.2",
-    "os-tmpdir": "^1.0.2",
-    "once": "^1.4.0",
-    "os-name": "^3.1.0",
-    "osenv": "^0.1.5",
-    "p-finally": "^1.0.0",
-    "p-limit": "^2.3.0",
-    "p-locate": "^3.0.0",
-    "p-map": "^2.1.0",
-    "p-map-series": "^1.0.0",
-    "p-queue": "^4.0.0",
-    "p-pipe": "^1.2.0",
-    "p-reduce": "^1.0.0",
-    "p-waterfall": "^1.0.0",
-    "parallel-transform": "^1.2.0",
-    "parse-github-repo-url": "^1.4.1",
-    "parse-url": "^5.0.1",
-    "parse-path": "^4.0.1",
-    "parse-json": "^4.0.0",
-    "p-try": "^2.2.0",
-    "pascalcase": "^0.1.1",
-    "path-is-absolute": "^1.0.1",
-    "path-key": "^2.0.1",
-    "path-dirname": "^1.0.2",
-    "path-exists": "^3.0.0",
-    "performance-now": "^2.1.0",
-    "path-parse": "^1.0.6",
-    "path-type": "^3.0.0",
-    "pify": "^4.0.1",
-    "posix-character-classes": "^0.1.1",
-    "process-nextick-args": "^2.0.1",
-    "pinkie-promise": "^2.0.1",
-    "promise-inflight": "^1.0.1",
-    "pinkie": "^2.0.4",
-    "pkg-dir": "^3.0.0",
-    "promzard": "^0.3.0",
-    "protocols": "^1.4.7",
-    "proto-list": "^1.2.4",
-    "psl": "^1.8.0",
-    "promise-retry": "^1.1.1",
-    "protoduck": "^5.0.1",
-    "pumpify": "^1.5.1",
-    "pump": "^3.0.0",
-    "q": "^1.5.1",
-    "quick-lru": "^1.1.0",
-    "punycode": "^2.1.1",
-    "read-cmd-shim": "^1.0.5",
-    "read": "^1.0.7",
-    "qs": "^6.5.2",
-    "read-pkg": "^3.0.0",
-    "read-pkg-up": "^3.0.0",
-    "read-package-json": "^2.1.1",
-    "read-package-tree": "^5.3.1",
-    "readdir-scoped-modules": "^1.1.0",
-    "readable-stream": "^2.3.7",
-    "redent": "^2.0.0",
-    "repeat-string": "^1.6.1",
-    "regex-not": "^1.0.2",
-    "repeating": "^2.0.1",
-    "request": "^2.88.2",
-    "repeat-element": "^1.1.3",
-    "require-directory": "^2.1.1",
-    "resolve": "^1.17.0",
-    "require-main-filename": "^2.0.0",
-    "resolve-cwd": "^2.0.0",
-    "resolve-from": "^3.0.0",
-    "restore-cursor": "^2.0.0",
-    "resolve-url": "^0.2.1",
-    "ret": "^0.1.15",
-    "rimraf": "^2.7.1",
-    "retry": "^0.10.1",
-    "run-async": "^2.4.1",
-    "rxjs": "^6.5.5",
-    "safe-regex": "^1.1.0",
-    "run-queue": "^1.0.3",
-    "safe-buffer": "^5.2.0",
-    "safer-buffer": "^2.1.2",
-    "set-blocking": "^2.0.0",
-    "semver": "^6.3.0",
-    "signal-exit": "^3.0.3",
-    "shebang-command": "^1.2.0",
-    "set-value": "^2.0.1",
-    "shallow-clone": "^3.0.1",
-    "slide": "^1.1.6",
-    "shebang-regex": "^1.0.0",
-    "slash": "^2.0.0",
-    "snapdragon": "^0.8.2",
-    "socks": "^2.3.3",
-    "smart-buffer": "^4.1.0",
-    "snapdragon-util": "^3.0.1",
-    "snapdragon-node": "^2.1.1",
-    "source-map": "^0.5.7",
-    "socks-proxy-agent": "^4.0.2",
-    "source-map-resolve": "^0.5.3",
-    "sort-keys": "^2.0.0",
-    "source-map-url": "^0.4.0",
-    "spdx-expression-parse": "^3.0.0",
-    "spdx-correct": "^3.1.0",
-    "spdx-exceptions": "^2.3.0",
-    "spdx-license-ids": "^3.0.5",
-    "split": "^1.0.1",
-    "split-string": "^3.1.0",
-    "sprintf-js": "^1.0.3",
-    "split2": "^2.2.0",
-    "static-extend": "^0.1.2",
-    "sshpk": "^1.16.1",
-    "ssri": "^6.0.1",
-    "stream-shift": "^1.0.1",
-    "stream-each": "^1.2.3",
-    "string-width": "^3.1.0",
-    "string.prototype.trimleft": "^2.1.2",
-    "string.prototype.trimright": "^2.1.2",
-    "string.prototype.trimend": "^1.0.1",
-    "string.prototype.trimstart": "^1.0.1",
-    "string_decoder": "^1.1.1",
-    "strip-ansi": "^5.2.0",
-    "strip-bom": "^3.0.0",
-    "strip-eof": "^1.0.0",
-    "supports-color": "^5.5.0",
-    "tar": "^4.4.13",
-    "strip-indent": "^2.0.0",
-    "strong-log-transformer": "^2.1.0",
-    "text-extensions": "^1.9.0",
-    "temp": "^0.4.0",
-    "temp-write": "^3.4.0",
-    "temp-dir": "^1.0.0",
-    "thenify": "^3.3.0",
-    "tmp": "^0.0.33",
-    "through": "^2.3.8",
-    "thenify-all": "^1.6.0",
-    "through2": "^2.0.5",
-    "to-object-path": "^0.3.0",
-    "to-regex": "^3.0.2",
-    "tough-cookie": "^2.5.0",
-    "trim-newlines": "^2.0.0",
-    "to-regex-range": "^2.1.1",
-    "tslib": "^1.11.1",
-    "tr46": "^1.0.1",
-    "trim-off-newlines": "^1.0.1",
-    "tunnel-agent": "^0.6.0",
-    "typedarray": "^0.0.6",
-    "type-fest": "^0.3.1",
-    "tweetnacl": "^0.14.5",
-    "uglify-js": "^3.9.1",
-    "uid-number": "^0.0.6",
-    "umask": "^1.1.0",
-    "unique-filename": "^1.1.1",
-    "unique-slug": "^2.0.2",
-    "unset-value": "^1.0.0",
-    "universalify": "^0.1.2",
-    "universal-user-agent": "^5.0.0",
-    "uri-js": "^4.2.2",
-    "urix": "^0.1.0",
-    "upath": "^1.2.0",
-    "use": "^3.1.1",
-    "dot-prop": "^4.2.0",
-    "uuid": "^3.4.0",
-    "verror": "^1.10.0",
-    "util-promisify": "^2.1.0",
-    "util-deprecate": "^1.0.2",
-    "validate-npm-package-license": "^3.0.4",
-    "webidl-conversions": "^4.0.2",
-    "validate-npm-package-name": "^3.0.0",
-    "wcwidth": "^1.0.1",
-    "which": "^1.3.1",
-    "which-module": "^2.0.0",
-    "wordwrap": "^1.0.0",
-    "whatwg-url": "^7.1.0",
-    "wrappy": "^1.0.2",
-    "windows-release": "^3.3.0",
-    "wide-align": "^1.1.3",
-    "wrap-ansi": "^6.2.0",
-    "y18n": "^4.0.0",
-    "write-json-file": "^3.2.0",
-    "yallist": "^3.1.1",
-    "write-file-atomic": "^2.4.3",
-    "xtend": "^4.0.2",
-    "write-pkg": "^3.2.0",
-    "union-value": "^1.0.1",
-    "clone-deep": "^4.0.1",
-    "yargs-parser": "^18.1.3",
-    "yargs": "^15.3.1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cs1193/blitz.git"
