fix: dev: develop: added splash on core

--- a/packages/blitz-core/package.json
+++ b/packages/blitz-core/package.json
@@ -23,10 +23,14 @@
     "url": "https://github.com/cs1193/blitz/issues"
   },
   "dependencies": {
-    "@cs1193/blitz-lib-aws": "file:../blitz-lib-aws",
+    "@cs1193/blitz-lib-cloud-aws": "file:../blitz-lib-cloud-aws",
     "@cs1193/blitz-lib-cloud-azure": "file:../blitz-lib-cloud-azure",
+    "@cs1193/blitz-lib-cloud-gcp": "file:../blitz-lib-cloud-gcp",
     "@cs1193/blitz-lib-docker": "file:../blitz-lib-docker",
-    "@cs1193/blitz-lib-gcp": "file:../blitz-lib-gcp",
-    "@cs1193/blitz-lib-terraform": "file:../blitz-lib-terraform"
+    "@cs1193/blitz-lib-terraform": "file:../blitz-lib-terraform",
+    "chalk": "^4.0.0",
+    "conf": "^6.2.4",
+    "figlet": "^1.4.0",
+    "simple-git": "^2.4.0"
   }
 }
