--- a/packages/blitz-lib-cloud-aws/package.json
+++ b/packages/blitz-lib-cloud-aws/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cs1193/blitz-lib-aws",
+  "name": "@cs1193/blitz-lib-cloud-aws",
   "version": "0.0.0",
   "description": "> TODO: description",
   "author": "Chandresh Rajkumar Manonmani <cs1193@gmail.com>",
