--- a/packages/blitz-lib-terraform/package.json
+++ b/packages/blitz-lib-terraform/package.json
@@ -21,5 +21,9 @@
   },
   "bugs": {
     "url": "https://github.com/cs1193/blitz/issues"
+  },
+  "dependencies": {
+    "@cs1193/blitz-lib-utilities": "file:../blitz-lib-utilities",
+    "bluebird": "^3.7.2"
   }
 }
