--- a/packages/blitz-lib-utilities/package.json
+++ b/packages/blitz-lib-utilities/package.json
@@ -21,5 +21,9 @@
   },
   "bugs": {
     "url": "https://github.com/cs1193/blitz/issues"
+  },
+  "dependencies": {
+    "bluebird": "^3.7.2",
+    "cross-spawn": "^7.0.2"
   }
 }
