--- a/packages/blitz-lib-terraform/package.json
+++ b/packages/blitz-lib-terraform/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@cs1193/blitz-lib-utilities": "file:../blitz-lib-utilities",
-    "bluebird": "^3.7.2"
+    "bluebird": "^3.7.2",
+    "yaml": "^1.9.2"
   }
 }
